Se guarda en un JSON
